@@ -1,3 +1,7 @@
+2004-01-16  Han-Wen Nienhuys   <hanwen@xs4all.nl>
+
+	* site/download/older-versions.html: new file for 1.6 and 1.8
+
 2004-01-13  Han-Wen Nienhuys   <hanwen@xs4all.nl>
 
 	* site/download/index.html: add separator between linux and others.
